[package]
name = "gluc_web"
version = "0.1.0"
authors = ["yanfeng.li <muxsdt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures="0.3"
#rbatis orm dep
rbatis = { git = "https://github.com/yanfenglee/rbatis.git", branch = "master", package = "rbatis", default-features = false, features = ["actix-mysql","snowflake"] }
# rbatis-macro-driver = { version = "1.8", features = ["no_print"] }
rbatis-macro-driver = { git = "https://github.com/yanfenglee/rbatis.git", branch = "master", package = "rbatis-macro-driver"}

#serde and base types
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4.0"
#log
log = "0.4"
fast_log = "1.3"
#runtime
async-std = { version = "1.7", features = ["attributes","tokio02"] }
#web server
actix-web = "3"
actix-http = "2.0"

#snowflake
rustflake = "0.1.0"
md5 = "0.7.0"
yaml-rust = "0.4"

once_cell = "1.5"
sha-1 = "0.7"